--- a/trunk/Languages/default-ru.xml
+++ b/trunk/Languages/default-ru.xml
@@ -1870,7 +1870,7 @@
 		<text format="b">Область загрузок</text>
 		<newline gap="8"/>
 		<text>Здесь показываются в данный момент загружаемые файлы. Вы можете просмотреть 
-		отдельные источники, развернув дерево каждого файла (нажав на значок „+“ слева).</text>
+		отдельные источники, развернув дерево каждого файла (нажав на значок «+» слева).</text>
 		<newline gap="8"/>
 		<text>Вы можете использовать эту команду также для получения помощи по загрузке.  Просто
 		выделите загрузку и выберите эту команду снова.</text>
@@ -1980,7 +1980,7 @@
 		<text format="b">Область выгрузок</text>
 		<newline gap="8"/>
 		<text>Здесь показываются очереди и выгрузки. Вы можете развернуть дерево каждой очереди, 
-		нажав на значок „+“ слева, и можете фильтровать список, используя кнопку справа в 
+		нажав на значок «+» слева, и можете фильтровать список, используя кнопку справа в 
 		панели инструментов.</text>
 	</document>
 
