File type (association) translation changed

--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -3675,7 +3675,7 @@ right quote	&#147;
 		<control caption="Bylos savybės"/>
 		<control caption="Vieta:"/>
 		<control/>
-		<control caption="Plėtinys:"/>
+		<control caption="Tipas:"/>
 		<control/>
 		<control caption="Modifikuota:"/>
 		<control/>
