--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -3274,7 +3274,7 @@ right quote	&#147;
 		<control/><control/>
 		<control caption="Atšakų į vedantįjį:"/>
 		<control/><control/>
-		<control caption="Petnerių į partnerį:"/>
+		<control caption="Partnerių į partnerį:"/>
 		<control/><control/>
 		<control caption="_Duomenų suspaudimas jungtyse:"/>
 		<control caption="Mazgo į atšaką"/>
